<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTut">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_1_add_category"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="144dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/a05" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_add_categ"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_2_add_transaction"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="144dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/a08" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_add_trans"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_3_delete_category"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="144dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/a06" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_del"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_4_settings"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_settings"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_5_send_daily_statictic"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="144dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/a04" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_share"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_6_you_can_rotate_diagramm"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_rotate"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_7_look_for_incomes_expenses"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="144dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/a11" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_change_diagram"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
    <![CDATA[





    app:layout_constraintTop_toBottomOf="@+id/textView16" />



]]>
</androidx.constraintlayout.widget.ConstraintLayout>