<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.moneyjet.frags.home.HomeFragment"
        android:label="@string/title_home" >
        <action
            android:id="@+id/action_navigation_home_to_newCatFragment"
            app:destination="@id/newCatFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.moneyjet.frags.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.moneyjet.frags.notifications.NotificationsFragment"
        android:label="@string/title_notifications" />
    <action
        android:id="@+id/action_global_navigation_dashboard"
        app:destination="@id/navigation_dashboard"
        app:enterAnim="@anim/nav_default_exit_anim"
        app:exitAnim="@anim/nav_default_pop_enter_anim"
        app:popEnterAnim="@anim/nav_default_exit_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    <action
        android:id="@+id/action_global_navigation_notifications"
        app:destination="@id/navigation_notifications"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_pop_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    <action
        android:id="@+id/action_global_navigation_home"
        app:destination="@id/navigation_home"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    <fragment
        android:id="@+id/newCatFragment"
        android:name="com.example.moneyjet.frags.NewCatFragment"
        android:label="fragment_new_cat"
        tools:layout="@layout/fragment_new_cat" />
    <activity
        android:id="@+id/settingsActivity"
        android:name="com.example.moneyjet.SettingsActivity"
        android:label="activity_settings"
        tools:layout="@layout/activity_settings" />
</navigation>